removed start button; touching the grid activates sound, un-touching it stops sound. works on mobile and laptop

--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 #freqslider{
-    width: 90vw;
+    width: 95vw;
     height: 100vw;
-    opacity: 1;
+    opacity: 0;
+}
+
+#grid{
+    border-style: solid;
+    border-color: black;
 }
